솔루션/03/1과제/manifests/01-namespace.yaml
# 네임스페이스 2개
apiVersion: v1
kind: Namespace
metadata:
  name: wsc2026
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
